--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -26,9 +26,9 @@
 
   <mat-button-toggle-group #group="matButtonToggleGroup">
 
-    <mat-button-toggle value="order" color="warn">
+    <!-- <mat-button-toggle value="order" color="warn">
       <mat-icon color="primary">create</mat-icon> Create A Donation
-    </mat-button-toggle>
+    </mat-button-toggle> -->
     <mat-button-toggle value="claim" color="primary" (click)="getTicket(code)">
       <mat-icon color="primary">add</mat-icon> Claim A Donation
     </mat-button-toggle>
