admin dashboard changes

--- a/src/app/adminupdatepopup/adminupdatepopup.component.html
+++ b/src/app/adminupdatepopup/adminupdatepopup.component.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1 mat-dialog-title>Update User</h1>
-    <form [formGroup]="ticketform" (ngSubmit)="updateTicket()">
+    <form [formGroup]="ticketform" >
         <div mat-dialog-content>
 
             <mat-form-field>
