--- a/src/app/updatepopup/updatepopup.component.html
+++ b/src/app/updatepopup/updatepopup.component.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1 mat-dialog-title>Update User</h1>
-<form [formGroup]="registerform" (ngSubmit)="UpdateUser()">
+<form [formGroup]="registerform">
     <div mat-dialog-content>
 
         <mat-form-field>
